<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity1">

        <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/one"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/four"
                app:layout_constraintEnd_toStartOf="@id/two"/>

        <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/two"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/one"
                app:layout_constraintEnd_toStartOf="@id/three"
                app:layout_constraintBottom_toTopOf="@+id/five"
                app:layout_constraintTop_toTopOf="parent"
        />

        <Button
                android:id="@+id/three"
              android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/three"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/six"
                app:layout_constraintStart_toEndOf="@id/two"/>

        <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/four"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/one"
                app:layout_constraintEnd_toStartOf="@id/five"
                app:layout_constraintBottom_toTopOf="@id/seven"/>

        <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/five"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/four"
                app:layout_constraintEnd_toStartOf="@id/six"
                app:layout_constraintTop_toBottomOf="@id/two"
                app:layout_constraintBottom_toTopOf="@id/eight"
        />

        <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/six"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/three"
                app:layout_constraintStart_toEndOf="@id/five"
                app:layout_constraintBottom_toTopOf="@id/nine"/>

        <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/seven"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/four"
                app:layout_constraintEnd_toStartOf="@id/eight"
                app:layout_constraintBottom_toTopOf="@id/delete"/>

        <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/eight"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/seven"
                app:layout_constraintEnd_toStartOf="@id/nine"
                app:layout_constraintTop_toBottomOf="@id/five"
                app:layout_constraintBottom_toTopOf="@id/zero"
        />

        <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/nine"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/eight"
                app:layout_constraintTop_toBottomOf="@id/six"
                app:layout_constraintBottom_toTopOf="@id/enter"/>

        <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/delete"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seven"
                app:layout_constraintEnd_toStartOf="@id/zero"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/zero"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toEndOf="@id/delete"
                app:layout_constraintEnd_toStartOf="@id/enter"
                app:layout_constraintTop_toBottomOf="@id/eight"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/enter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="@dimen/button_size"
                android:text="@string/enter"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/zero"
                app:layout_constraintTop_toBottomOf="@id/nine"
                app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>